# TemperatureDisplayer

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  Setup.md
Drivers/Inc/: mcp9808_driver.h  nokia5110_driver.h  pcd8544_driver.h  stm32f401xx.h  stm32f401xx_clocks.h  stm32f401xx_gpio_driver.h  stm32f401xx_i2c_driver.h  stm32f401xx_spi_driver.h
Drivers/Src/: mcp9808_driver.c  nokia5110_driver.c  pcd8544_driver.c  stm32f401xx.c  stm32f401xx_clocks.c  stm32f401xx_gpio_driver.c  stm32f401xx_i2c_driver.c  stm32f401xx_spi_driver.c
Inc/: Fonts.c  Fonts.h  bsp.c  bsp.h
Libs/GfxLib/: GfxLib.c  GfxLib.h
Src/: main.c
cmake/: arm-gcc-toolchain.cmake  arm-none-eabi.cmake
docs/: FIXME.md  Setup.md  TODO.md
